--- a/index.html
+++ b/index.html
@@ -31,11 +31,18 @@
     <title>Laia | Front-end Developer</title>
   </head>
   <body>
-    <div class="container">
+    <div class="hero">
       <h1>Laia</h1>
-      <p>Hola Caracola</p>
-      <div class="social-media">
-        <i class="fa-brands fa-github" style="color: #4cb0e1"></i>
+      <h2>Front-end Developer based in Switzerland</h2>
+      <div class="btn btn-contact">Contact me</div>
+      <div class="footer">
+        <h2>lcastillaiamoros@gmail.com</h2>
+        <div class="social-media">
+          <i class="fa-brands fa-github" style="color: #4cb0e1"></i>
+          <i class="fa-brands fa-linkedin" style="color: #4cb0e1"></i>
+          <i class="fa-solid fa-envelope" style="color: #4cb0e1"></i>
+          <i class="fa-brands fa-instagram" style="color: #4cb0e1"></i>
+        </div>
       </div>
     </div>
   </body>
