updated footer icons

--- a/index.html
+++ b/index.html
@@ -38,10 +38,20 @@
       <div class="footer">
         <h2>lcastillaiamoros@gmail.com</h2>
         <div class="social-media">
-          <i class="fa-brands fa-github" style="color: #4cb0e1"></i>
-          <i class="fa-brands fa-linkedin" style="color: #4cb0e1"></i>
-          <i class="fa-solid fa-envelope" style="color: #4cb0e1"></i>
-          <i class="fa-brands fa-instagram" style="color: #4cb0e1"></i>
+          <a href="https://github.com/Aylhenia" target="_blank">
+            <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
+          ></a>
+          <a href="mailto:lcastillaiamoros@gmail.com"
+            ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
+          ></a>
+          <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
+            ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
+          ></a>
         </div>
       </div>
     </div>
