added intro-links and underline animation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <div class="hero">
       <h1>Laia</h1>
       <h2>Front-end Developer based in Switzerland</h2>
+      <div class="intro-links">
+        <a href="#" target="_blank" class="link me-3 work hover-underline-animation">see my projects</a>
+        <a href="#" target="_blank" class="link ms-3 about hover-underline-animation">more about me</a>
+      </div>
       <div class="btn btn-contact">Contact me</div>
       <div class="footer">
         <h2>lcastillaiamoros@gmail.com</h2>
