--- a/work.html
+++ b/work.html
@@ -31,6 +31,6 @@
     <title>Laia | Front-end Developer</title>
   </head>
   <body>
-    
+    <h1 class="secondary-title">Take a look on my portfolio</h1>
   </body>
 </html>
