--- a/work.html
+++ b/work.html
@@ -31,6 +31,62 @@
     <title>Laia | Front-end Developer</title>
   </head>
   <body>
-    <h1 class="secondary-title">Take a look on my portfolio</h1>
+    <div class="container">
+      <h1 class="secondary-title mt-5">Take a look on my portfolio</h1>
+      <div class="row mb-5">
+        <div class="col-sm-6 mb-3">
+          <img
+            src="images/worldclock.png"
+            alt="World clock application"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col-sm-6">
+          <h2 class="mb-3">World Clock App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a
+              href="https://worldclocklca.netlify.app"
+              class="launch-link"
+              target="_blank"
+              title="Check out this world clock application"
+              >Launch World Clock App</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-sm-6 order-sm-2">
+          <img
+            src="images/weatherapp.png"
+            alt="weather application"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col-sm-6 order-sm-1">
+          <h2 class="mb-3">Weather App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a
+              href="https://weatherapplca.netlify.app"
+              class="launch-link"
+              target="_blank"
+              title="Check out the weather in your city!"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
