--- a/work.html
+++ b/work.html
@@ -32,58 +32,64 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="secondary-title mt-5">Take a look on my portfolio</h1>
+      <h1 class="secondary-title mt-5 mb-5">Take a look on my portfolio</h1>
       <div class="row mb-5">
-        <div class="col-sm-6 mb-3">
+        <div class="col-md-6 mb-3">
           <img
             src="images/worldclock.png"
             alt="World clock application"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-sm-6">
-          <h2 class="mb-3">World Clock App</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a
-              href="https://worldclocklca.netlify.app"
-              class="launch-link"
-              target="_blank"
-              title="Check out this world clock application"
-              >Launch World Clock App</a
-            >
+
+        <div class="col-md-6">
+          <div class="project-description">
+            <h2 class="mb">World Clock App</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <div class="mt-5">
+              <a
+                href="https://worldclocklca.netlify.app"
+                class="launch-link"
+                target="_blank"
+                title="Check out this world clock application"
+                >Launch World Clock App</a
+              >
+            </div>
           </div>
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-sm-6 order-sm-2">
+        <div class="col-md-6 order-md-2">
           <img
             src="images/weatherapp.png"
             alt="weather application"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-sm-6 order-sm-1">
-          <h2 class="mb-3">Weather App</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a
-              href="https://weatherapplca.netlify.app"
-              class="launch-link"
-              target="_blank"
-              title="Check out the weather in your city!"
-              >Launch Weather App</a
-            >
+
+        <div class="col-md-6 order-md-1">
+          <div class="project-description">
+            <h2 class="mb-3">Weather App</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <div class="mt-5">
+              <a
+                href="https://weatherapplca.netlify.app"
+                class="launch-link"
+                target="_blank"
+                title="Check out the weather in your city!"
+                >Launch Weather App</a
+              >
+            </div>
           </div>
         </div>
       </div>
