--- a/index.html
+++ b/index.html
@@ -31,40 +31,36 @@
     <title>Laia | Front-end Developer</title>
   </head>
   <body>
-    <h1>Laia</h1>
-    <h2>Front-end Developer based in Switzerland</h2>
-    <div class="intro-links mt-4">
-      <a
-        href="/work.html"
-        target="_blank"
-        class="link me-3 work hover-underline-animation"
-        >see my projects</a
-      >
-      <a
-        href="#"
-        target="_blank"
-        class="link ms-3 about hover-underline-animation"
-        >more about me</a
-      >
-    </div>
+    <div class="parent">
+      <h1>Laia</h1>
+      <h2>Front-end Developer based in Switzerland</h2>
+      <div class="intro-links mt-4">
+        <a href="/work.html" class="link me-3 work hover-underline-animation"
+          >see my projects</a
+        >
+        <a href="#" class="link ms-3 about hover-underline-animation"
+          >more about me</a
+        >
+      </div>
 
-    <div class="footer">
-      <h2 class="email">lcastillaiamoros@gmail.com</h2>
-      <div class="social-media">
-        <a href="https://github.com/Aylhenia" target="_blank">
-          <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
-        ></a>
-        <a
-          href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
-          target="_blank"
-          ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
-        ></a>
-        <a href="mailto:lcastillaiamoros@gmail.com"
-          ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
-        ></a>
-        <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
-          ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
-        ></a>
+      <div class="footer">
+        <h2 class="email">lcastillaiamoros@gmail.com</h2>
+        <div class="social-media">
+          <a href="https://github.com/Aylhenia" target="_blank">
+            <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
+          ></a>
+          <a href="mailto:lcastillaiamoros@gmail.com"
+            ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
+          ></a>
+          <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
+            ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
+          ></a>
+        </div>
       </div>
     </div>
   </body>
