--- a/work.html
+++ b/work.html
@@ -32,63 +32,95 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="secondary-title mt-5 mb-5">Take a look on my portfolio</h1>
-      <div class="row mb-5">
-        <div class="col-md-6 mb-3">
-          <img
-            src="images/worldclock.png"
-            alt="World clock application"
-            class="img-fluid rounded"
-          />
-        </div>
+      <h1 class="secondary-title mt-5 mb-5">Take a look at my portfolio</h1>
+      <div class="work-portfolio">
+        <div class="row mb-5">
+          <div class="col-md-6">
+            <img
+              src="images/worldclock.png"
+              alt="World clock application"
+              class="img-fluid rounded"
+            />
+          </div>
 
-        <div class="col-md-6">
-          <div class="project-description">
-            <h2 class="mb">World Clock App</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <div class="mt-5">
-              <a
-                href="https://worldclocklca.netlify.app"
-                class="launch-link"
-                target="_blank"
-                title="Check out this world clock application"
-                >Launch World Clock App</a
-              >
+          <div class="col-md-6">
+            <div class="project-description">
+              <h2 class="mb-3">World Clock App</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+                omnis quam vel eos eveniet alias temporibus deserunt veritatis
+                minima fugiat explicabo eum dolore.
+              </p>
+              <div class="btn">
+                <a
+                  href="https://worldclocklca.netlify.app"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out this world clock application"
+                  >Launch World Clock App</a
+                >
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col-md-6 order-md-2">
-          <img
-            src="images/weatherapp.png"
-            alt="weather application"
-            class="img-fluid rounded"
-          />
-        </div>
 
-        <div class="col-md-6 order-md-1">
-          <div class="project-description">
-            <h2 class="mb-3">Weather App</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <div class="mt-5">
-              <a
-                href="https://weatherapplca.netlify.app"
-                class="launch-link"
-                target="_blank"
-                title="Check out the weather in your city!"
-                >Launch Weather App</a
-              >
+        <div class="row mb-5">
+          <div class="col-md-6 order-md-2">
+            <img
+              src="images/weatherapp.png"
+              alt="weather application"
+              class="img-fluid rounded"
+            />
+          </div>
+
+          <div class="col-md-6 order-md-1">
+            <div class="project-description">
+              <h2 class="mb-3">Weather App</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+                omnis quam vel eos eveniet alias temporibus deserunt veritatis
+                minima fugiat explicabo eum dolore.
+              </p>
+              <div class="btn">
+                <a
+                  href="https://weatherapplca.netlify.app"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out the weather in your city!"
+                  >Launch Weather App</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="images/drawing.png"
+              alt="Drawing app"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-sm-6">
+            <div class="project-description">
+              <h2 class="mb-3">Drawing App</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+                omnis quam vel eos eveniet alias temporibus deserunt veritatis
+                minima fugiat explicabo eum dolore.
+              </p>
+              <div class="btn">
+                <a
+                  href="https://www.shecodes.io/workshops/shecodes-basics-add-on-58fcd0ea-c1ec-4a27-b9b3-09c6e958a1fa/projects/1680152"
+                  class="launch-link"
+                  target="_blank"
+                  title="Visit this drawing application"
+                  >Launch Drawing App</a
+                >
+              </div>
             </div>
           </div>
         </div>
