--- a/work.html
+++ b/work.html
@@ -103,7 +103,7 @@
               class="img-fluid rounded"
             />
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6">
             <div class="project-description">
               <h2 class="mb-3">Drawing App</h2>
               <p>
