wrote the about me paragraph

--- a/about.html
+++ b/about.html
@@ -30,5 +30,41 @@
 
     <title>Laia | Front-end Developer</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="about-me">
+        <div class="row">
+          <div class="col-lg-6">
+            <h1>¡Hola! My name is Laia Castilla i Amorós</h1>
+            <h2>A junior front-end developer based in Swizerland</h2>
+            <p>
+              Originally from Barcelona, I have always been an unusually
+              imaginative and curious person. Being the latter the reason why I
+              moved to Switzerland to pursue a PhD in Chemistry. It was then
+              when I started to explore the digital media as means of creation,
+              being always extremely enthusiastic whenever I had to use Adobe
+              Illustrator to create images that could visually explain in an
+              intuitive way the scientific advances we were doing.
+              <br />
+              During a needed break following my studies, I realised how much I
+              had craved creativity during the last few years. I then discovered
+              the art of crafting aesthetically pleasing and accessible
+              webpages, visual essays and storytelling. I was amazed by the work
+              of numerous front-end developers and webdesigners.
+              <i>I would love to do that!</i> I told myself.
+              <i>What is stoping you?</i> I answered. Not knowing how to do it
+              being the only reasonable answer I could give, I decided to take a
+              leap and do with my life whatever makes me happy.
+              <br />
+              I am now forming myself as a front-end developer, feeling at ease
+              with the coding logics and the idea of constantly changing
+              languages! I am looking forward to growing as a developer,
+              learning from my peers and slowly but surely becoming able of
+              creating webpages as inspiring as the ones that got me here!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
