added image system

--- a/about.html
+++ b/about.html
@@ -63,6 +63,9 @@
               creating webpages as inspiring as the ones that got me here!
             </p>
           </div>
+          <div class="col-lg-6">
+            <img src="" alt="" class="img-fluid" />
+          </div>
         </div>
       </div>
     </div>
