update google fonts and about me

--- a/about.html
+++ b/about.html
@@ -12,8 +12,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;500&family=Fira+Code:wght@400;500&family=Playfair+Display:wght@400;700&family=Poppins:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;500&family=Fira+Code:wght@400;500&family=Playfair+Display:wght@400;700&family=Poppins:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
@@ -35,8 +37,10 @@
       <div class="about-me">
         <div class="row">
           <div class="col-lg-6">
-            <h1>¡Hola! My name is Laia Castilla i Amorós</h1>
-            <h2>A junior front-end developer based in Swizerland</h2>
+            <h1 class="mb-4">¡Hola! I'm Laia</h1>
+            <h2 class="mb-4">
+              A junior front-end developer based in Swizerland
+            </h2>
             <p>
               Originally from Barcelona, I have always been an unusually
               imaginative and curious person. Being the latter the reason why I
@@ -51,8 +55,8 @@
               the art of crafting aesthetically pleasing and accessible
               webpages, visual essays and storytelling. I was amazed by the work
               of numerous front-end developers and webdesigners.
-              <i>I would love to do that!</i> I told myself.
-              <i>What is stoping you?</i> I answered. Not knowing how to do it
+              <em>I would love to do that!</em> I told myself.
+              <em>What is stoping you?</em> I answered. Not knowing how to do it
               being the only reasonable answer I could give, I decided to take a
               leap and do with my life whatever makes me happy.
               <br />
