--- a/about.html
+++ b/about.html
@@ -14,8 +14,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;500&family=Fira+Code:wght@400;500&family=Playfair+Display:wght@400;700&family=Poppins:wght@100;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;500&family=Fira+Code:wght@400;500&family=Playfair+Display:wght@400;700&family=Poppins:wght@100;200;400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
@@ -49,7 +51,7 @@
               being always extremely enthusiastic whenever I had to use Adobe
               Illustrator to create images that could visually explain in an
               intuitive way the scientific advances we were doing.
-              <br />
+              <br /><br />
               During a needed break following my studies, I realised how much I
               had craved creativity during the last few years. I then discovered
               the art of crafting aesthetically pleasing and accessible
@@ -58,8 +60,7 @@
               <em>I would love to do that!</em> I told myself.
               <em>What is stoping you?</em> I answered. Not knowing how to do it
               being the only reasonable answer I could give, I decided to take a
-              leap and do with my life whatever makes me happy.
-              <br />
+              leap and do with my life whatever makes me happy. <br /><br />
               I am now forming myself as a front-end developer, feeling at ease
               with the coding logics and the idea of constantly changing
               languages! I am looking forward to growing as a developer,
@@ -68,7 +69,7 @@
             </p>
           </div>
           <div class="col-lg-6">
-            <img src="" alt="" class="img-fluid" />
+            <img src="images/kyototree.jpg" alt="" class="img-fluid" />
           </div>
         </div>
       </div>
