--- a/about.html
+++ b/about.html
@@ -67,6 +67,13 @@
               learning from my peers and slowly but surely becoming able of
               creating webpages as inspiring as the ones that got me here!
             </p>
+            <div class="intro-links mt-4">
+              <a
+                href="/work.html"
+                class="link me-3 work hover-underline-animation"
+                >see my projects</a
+              >
+            </div>
           </div>
           <div class="col-lg-6">
             <img src="images/kyototree.jpg" alt="" class="img-fluid" />
