--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
   <body>
     <div class="container">
       <div class="about-me">
-        <div class="row">
+        <div class="row mb-5">
           <div class="col-lg-6">
             <h1 class="mb-4">¡Hola! I'm Laia</h1>
             <h2 class="mb-4">
