update about and made it responsive

--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
     <div class="container">
       <div class="about-me">
         <div class="row mb-5">
-          <div class="col-lg-6">
+          <div class="col-lg">
             <h1 class="mb-4">¡Hola! I'm Laia</h1>
             <h2 class="mb-4">
               A junior front-end developer based in Swizerland
             </h2>
-            <p>
+            <p class="about-me-text">
               Originally from Barcelona, I have always been an unusually
               imaginative and curious person. Being the latter the reason why I
               moved to Switzerland to pursue a PhD in Chemistry. It was then
@@ -75,7 +75,7 @@
               >
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col d-none d-lg-block">
             <img src="images/kyototree.jpg" alt="" class="img-fluid" />
           </div>
         </div>
