update responsiveness h1 about.html

--- a/about.html
+++ b/about.html
@@ -39,7 +39,11 @@
       <div class="about-me">
         <div class="row mb-5">
           <div class="col-lg">
-            <h1 class="mb-4">¡Hola! I'm Laia</h1>
+            <h1 class="mb-4">
+              ¡Hola!
+              <div class="d-lg-none"></div>
+              I'm Laia
+            </h1>
             <h2 class="mb-4">
               A junior front-end developer based in Swizerland
             </h2>
