changed work description for each projectt

--- a/work.html
+++ b/work.html
@@ -39,20 +39,56 @@
         <div class="row mb-5">
           <div class="col-md-6">
             <img
-              src="images/worldclock.png"
-              alt="World clock application"
+              src="images/weatherapp.png"
+              alt="weather application"
               class="img-fluid rounded"
             />
           </div>
 
           <div class="col-md-6">
+            <div class="project-description weather">
+              <h2 class="mb-3">Weather App</h2>
+              <p>
+                My first "real" project... I built a Vanilla JavaScript weather
+                app in SheCodes Plus, an advanced 8-week JavaScript coding
+                workshop. Building upon my previously-gained knowledge, I also
+                became skilled in Bootstrap, API’s, real-life development
+                workflow, hosting, and advanced JavaScript. Using Procreate, I
+                created the weather icons as well as the background. I combined
+                all of these skills to create a fully-functioning weather app.
+                Both the icons and the background change during the night-time.
+                Check it out!
+              </p>
+              <div class="btn">
+                <a
+                  href="https://weatherapplca.netlify.app"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out the weather in your city!"
+                  >Launch Weather App</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-md-6 order-md-2">
+            <img
+              src="images/worldclock.png"
+              alt="World clock application"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6 order-md-1">
             <div class="project-description">
               <h2 class="mb-3">World Clock App</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
+                Following the above project, I built a Vanilla JavaScript world
+                clock app. This project was also built with Bootstrap, API’s,
+                real-life development workflow, hosting, and advanced
+                JavaScript. Salvador Dalí and the wild concept of time inspired
+                me for the app's background, which I draw using Procreate. Check
+                out the local time of your next destination!
               </p>
               <div class="btn">
                 <a
@@ -67,36 +103,6 @@
           </div>
         </div>
 
-        <div class="row mb-5">
-          <div class="col-md-6 order-md-2">
-            <img
-              src="images/weatherapp.png"
-              alt="weather application"
-              class="img-fluid rounded"
-            />
-          </div>
-
-          <div class="col-md-6 order-md-1">
-            <div class="project-description">
-              <h2 class="mb-3">Weather App</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
-              </p>
-              <div class="btn">
-                <a
-                  href="https://weatherapplca.netlify.app"
-                  class="launch-link"
-                  target="_blank"
-                  title="Check out the weather in your city!"
-                  >Launch Weather App</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="row">
           <div class="col-md-6">
             <img
@@ -109,10 +115,12 @@
             <div class="project-description">
               <h2 class="mb-3">Drawing App</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
+                My first project... I entered the world of front-end development
+                by gaining some knowledge in HTML, CSS, and JavaScript. I used
+                my knowledge of these languages, along with my new skills in VS
+                Code, to build a landing page about this hobbie of mine. The
+                page utilises JavaScript functions to create user interaction,
+                including a Dark theme.
               </p>
               <div class="btn">
                 <a
