adding contact-me section

--- a/about.html
+++ b/about.html
@@ -84,6 +84,34 @@
           </div>
         </div>
       </div>
+      <div id="contact-me">
+        <h2 class="secondary-title mt-5">Let's get in touch!</h2>
+        <p class="about-me-text">
+          I'm currently looking for my first job opportunity as a front-end
+          developer so I'm very excited about getting involved in new projects.
+          <br />Send me an email or contact me via any of my social media if
+          you'd like to work together or just want to say hi!
+        </p>
+        <div class="footer">
+          <h2 class="email">lcastillaiamoros@gmail.com</h2>
+          <div class="social-media">
+            <a href="https://github.com/Aylhenia" target="_blank">
+              <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
+            ></a>
+            <a href="mailto:lcastillaiamoros@gmail.com"
+              ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
+            ></a>
+            <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
+              ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
+            ></a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
