made contact more responsive

--- a/about.html
+++ b/about.html
@@ -93,7 +93,9 @@
           you'd like to work together or just want to say hi!
         </p>
         <div class="footer">
-          <h2 class="email">lcastillaiamoros@gmail.com</h2>
+          <h2 class="email">
+            lcastillaiamoros@gmail.com
+          </h2>
           <div class="social-media">
             <a href="https://github.com/Aylhenia" target="_blank">
               <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
