added strong effect

--- a/about.html
+++ b/about.html
@@ -89,13 +89,13 @@
         <p class="about-me-text">
           I'm currently looking for my first job opportunity as a front-end
           developer so I'm very excited about getting involved in new projects.
-          <br />Send me an email or contact me via any of my social media if
-          you'd like to work together or just want to say hi!
+          <br /><strong
+            >Send me an email or contact me via any of my social media</strong
+          >
+          if you'd like to work together or just want to say hi!
         </p>
         <div class="footer">
-          <h2 class="email">
-            lcastillaiamoros@gmail.com
-          </h2>
+          <h2 class="email">lcastillaiamoros@gmail.com</h2>
           <div class="social-media">
             <a href="https://github.com/Aylhenia" target="_blank">
               <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
