adding navigation bar

--- a/index.html
+++ b/index.html
@@ -34,6 +34,34 @@
   </head>
   <body>
     <div class="parent">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Laia Castilla i Amorós</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="about.html" title="About Laia">About</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Laia"
+                >Contact me</a
+              >
+            </div>
+          </div>
+        </div>
+      </nav>
       <h1>Laia</h1>
       <h2>Front-end Developer based in Switzerland</h2>
       <div class="intro-links mt-4">
