--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
           </div>
         </div>
       </div>
-      <div id="contact-me">
+      <div id="contact">
         <h2 class="secondary-title mt-5">Let's get in touch!</h2>
         <p class="about-me-text">
           I'm currently looking for my first job opportunity as a front-end
