updated navbar index.html
ms-auto in links div to align them to the right

--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav ms-auto">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="about.html" title="About Laia">About</a>
+              <a class="nav-link" href="/about.html" title="About Laia"
+                >About</a
+              >
+              <a class="nav-link" href="/work.html" title="About Laia">Work</a>
               <a
                 class="nav-link"
                 href="/about.html#contact"
                 title="Contact Laia"
-                >Contact me</a
+                >Contact</a
               >
             </div>
           </div>
