added navbar to work.html and corrected dimensions

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
+            <div class="navbar-nav ms-auto me-5 pe-5">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="/about.html" title="About Laia"
                 >About</a
               >
-              <a class="nav-link" href="/work.html" title="About Laia">Work</a>
+              <a class="nav-link" href="/work.html" title="Portfolio">Work</a>
               <a
                 class="nav-link"
                 href="/about.html#contact"
