--- a/work.html
+++ b/work.html
@@ -33,6 +33,32 @@
     <title>Laia | Front-end Developer</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Laia Castilla i Amorós</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto me-5 pe-5">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/about.html" title="About Laia">About</a>
+            <a class="nav-link active" href="/work.html" title="Portfolio">Work</a>
+            <a class="nav-link" href="/about.html#contact" title="Contact Laia"
+              >Contact</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <h1 class="secondary-title mt-5 mb-5">Take a look at my portfolio</h1>
       <div class="work-portfolio">
