--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto me-5 pe-5">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="/">Home</a>
             <a class="nav-link active" href="/about.html" title="About Laia"
               >About</a
