--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="parent">
-      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Laia Castilla i Amorós</a>
           <button
@@ -49,7 +49,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto me-5 pe-5">
+            <div class="navbar-nav ms-auto">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="/about.html" title="About Laia"
                 >About</a
