--- a/work.html
+++ b/work.html
@@ -48,10 +48,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto me-5 pe-5">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/about.html" title="About Laia">About</a>
-            <a class="nav-link active" href="/work.html" title="Portfolio">Work</a>
+            <a class="nav-link active" href="/work.html" title="Portfolio"
+              >Work</a
+            >
             <a class="nav-link" href="/about.html#contact" title="Contact Laia"
               >Contact</a
             >
