--- a/work.html
+++ b/work.html
@@ -48,10 +48,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto me-5 pe-5">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/about.html" title="About Laia">About</a>
-            <a class="nav-link active" href="/work.html" title="Portfolio">Work</a>
+            <a class="nav-link active" href="/work.html" title="Portfolio"
+              >Work</a
+            >
             <a class="nav-link" href="/about.html#contact" title="Contact Laia"
               >Contact</a
             >
@@ -159,6 +161,28 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="footer mt-5 mb-3">
+        <a class="work-inquiry" href="/about.html#contact">
+          Let's work together!</a
+        >
+        <h2 class="email">lcastillaiamoros@gmail.com</h2>
+        <div class="social-media">
+          <a href="https://github.com/Aylhenia" target="_blank">
+            <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
+          ></a>
+          <a href="mailto:lcastillaiamoros@gmail.com"
+            ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
+          ></a>
+          <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
+            ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
+          ></a>
         </div>
       </div>
     </div>
