fixed footer added work-inquiry

--- a/work.html
+++ b/work.html
@@ -163,11 +163,14 @@
           </div>
         </div>
       </div>
-      <div class="footer mt-5 mb-3">
-        <a class="work-inquiry" href="/about.html#contact">
+      <div class="footer mb-3">
+        <a
+          class="work-inquiry hover-underline-animation"
+          href="/about.html#contact"
+        >
           Let's work together!</a
         >
-        <h2 class="email">lcastillaiamoros@gmail.com</h2>
+        <h2 class="email mt-3">lcastillaiamoros@gmail.com</h2>
         <div class="social-media">
           <a href="https://github.com/Aylhenia" target="_blank">
             <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
