made it more SEO friendly

--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Laia Castilla i Amorós is a web designer and front-end web developer based in Geneva, Switzerland."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -51,7 +55,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="/" title="Go back to my homepage">Home</a>
             <a class="nav-link active" href="/about.html" title="About Laia"
               >About</a
             >
@@ -108,7 +112,7 @@
             </div>
           </div>
           <div class="col d-none d-lg-block">
-            <img src="images/kyototree.jpg" alt="" class="img-fluid" />
+            <img src="images/kyototree.jpg" alt="Picture of a beautiful tree I took in Kyoto, Japan" class="img-fluid" />
           </div>
         </div>
       </div>
