--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Laia Castilla i Amorós is a front-end web developer based in Geneva, Switzerland.">
+    <meta
+      name="description"
+      content="Laia Castilla i Amorós is a web designer and front-end web developer based in Geneva, Switzerland."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,10 +72,16 @@
       <h1>Laia</h1>
       <h2>Front-end Developer based in Switzerland</h2>
       <div class="intro-links mt-4">
-        <a href="/work.html" class="link me-3 work hover-underline-animation"
+        <a
+          href="/work.html"
+          title="Check out my portfolio"
+          class="link me-3 work hover-underline-animation"
           >see my projects</a
         >
-        <a href="/about.html" class="link ms-3 about hover-underline-animation"
+        <a
+          href="/about.html"
+          title="Learn more about me"
+          class="link ms-3 about hover-underline-animation"
           >more about me</a
         >
       </div>
@@ -80,18 +89,19 @@
       <div class="footer">
         <h2 class="email">lcastillaiamoros@gmail.com</h2>
         <div class="social-media">
-          <a href="https://github.com/Aylhenia" target="_blank">
+          <a href="https://github.com/Aylhenia" title="My GitHub" target="_blank">
             <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/laia-castilla-i-amor%C3%B3s-239a51188/"
+            title="My Linkedin"
             target="_blank"
             ><i class="fa-brands fa-linkedin icon" style="color: #4cb0e1"></i
           ></a>
-          <a href="mailto:lcastillaiamoros@gmail.com"
+          <a href="mailto:lcastillaiamoros@gmail.com" title="Send me an email"
             ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
           ></a>
-          <a href="https://www.instagram.com/laiacastilla/" targett="_blank"
+          <a href="https://www.instagram.com/laiacastilla/" title="My Instagram account" target="_blank"
             ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
           ></a>
         </div>
