--- a/work.html
+++ b/work.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Laia Castilla i Amorós is a web designer and front-end web developer based in Geneva, Switzerland."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -49,12 +53,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/about.html" title="About Laia">About</a>
+            <a class="nav-link" aria-current="page" href="/" title="Go back  to my homepage">Home</a>
+            <a class="nav-link" href="/about.html" title="About me">About</a>
             <a class="nav-link active" href="/work.html" title="Portfolio"
               >Work</a
             >
-            <a class="nav-link" href="/about.html#contact" title="Contact Laia"
+            <a class="nav-link" href="/about.html#contact" title="Contact me"
               >Contact</a
             >
           </div>
@@ -167,6 +171,7 @@
         <a
           class="work-inquiry hover-underline-animation"
           href="/about.html#contact"
+          title="Check out how to contact me"
         >
           Let's work together!</a
         >
