--- a/about.html
+++ b/about.html
@@ -55,7 +55,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" aria-current="page" href="/" title="Go back to my homepage">Home</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="/"
+              title="Go back to my homepage"
+              >Home</a
+            >
             <a class="nav-link active" href="/about.html" title="About Laia"
               >About</a
             >
@@ -112,11 +118,23 @@
             </div>
           </div>
           <div class="col d-none d-lg-block">
-            <img src="images/kyototree.jpg" alt="Picture of a beautiful tree I took in Kyoto, Japan" class="img-fluid" />
+            <img
+              src="images/kyototree.jpg"
+              alt="Picture of a beautiful tree I took in Kyoto, Japan"
+              class="img-fluid"
+            />
           </div>
         </div>
       </div>
       <div id="contact">
+        <h2 class="secondary-title mt-5">My skillset</h2>
+        <p class="about-me-text">
+          Front-end dev: HTML, CSS, JS, API, Bootstrap, Hosting, SEO <br />
+          Web design: Figma, Adobe Illustrator, Affinity Designer 2, Procreate
+          <br />
+          You can talk to me in: English, French, Spanish & Catalan. I am
+          currently learning Japanese(A2.1)
+        </p>
         <h2 class="secondary-title mt-5">Let's get in touch!</h2>
         <p class="about-me-text">
           I'm currently looking for my first job opportunity as a front-end
