--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Laia Castilla i Amorós is a web designer and front-end web developer based in Geneva, Switzerland."
+      content="Learn more about Laia. Laia Castilla i Amorós is a web designer and front-end web developer based in Geneva, Switzerland."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -36,7 +36,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Laia | Front-end Developer</title>
+    <title> About Laia | Front-end Developer</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
