added signature footer

--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
       <div class="footer">
         <h2 class="email">lcastillaiamoros@gmail.com</h2>
         <div class="social-media">
-          <a href="https://github.com/Aylhenia" title="My GitHub" target="_blank">
+          <a
+            href="https://github.com/Aylhenia"
+            title="My GitHub"
+            target="_blank"
+          >
             <i class="fa-brands fa-github icon" style="color: #4cb0e1"></i
           ></a>
           <a
@@ -101,11 +105,19 @@
           <a href="mailto:lcastillaiamoros@gmail.com" title="Send me an email"
             ><i class="fa-solid fa-envelope icon" style="color: #4cb0e1"></i
           ></a>
-          <a href="https://www.instagram.com/laiacastilla/" title="My Instagram account" target="_blank"
+          <a
+            href="https://www.instagram.com/laiacastilla/"
+            title="My Instagram account"
+            target="_blank"
             ><i class="fa-brands fa-instagram icon" style="color: #4cb0e1"></i
           ></a>
         </div>
       </div>
+      <footer>
+        <div class="signature">
+          Designed and coded by <a href=" https://github.com/Aylhenia">LCA</a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
