--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title> About Laia | Front-end Developer</title>
+    <title>About Laia | Front-end Developer</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -165,5 +165,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="signature">
+        Designed and coded by <a href=" https://github.com/Aylhenia">LCA</a>
+      </div>
+    </footer>
   </body>
 </html>
