--- a/work.html
+++ b/work.html
@@ -53,7 +53,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" aria-current="page" href="/" title="Go back  to my homepage">Home</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="/"
+              title="Go back  to my homepage"
+              >Home</a
+            >
             <a class="nav-link" href="/about.html" title="About me">About</a>
             <a class="nav-link active" href="/work.html" title="Portfolio"
               >Work</a
@@ -194,5 +200,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="signature">
+        Designed and coded by <a href=" https://github.com/Aylhenia">LCA</a>
+      </div>
+    </footer>
   </body>
 </html>
