updated the signature link

--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
     </div>
     <footer>
       <div class="signature">
-        Designed and coded by <a href=" https://github.com/Aylhenia">LCA</a>
+        Designed and coded by <a href="https://github.com/Aylhenia/portfolio-project">LCA</a>
       </div>
     </footer>
   </body>
