made the previous SEO friendly and target blank

--- a/about.html
+++ b/about.html
@@ -167,7 +167,13 @@
     </div>
     <footer>
       <div class="signature">
-        Designed and coded by <a href="https://github.com/Aylhenia/portfolio-project">LCA</a>
+        Designed and coded by
+        <a
+          href="https://github.com/Aylhenia/portfolio-project"
+          title="Portfolio's repository"
+          target="_blank"
+          >LCA</a
+        >
       </div>
     </footer>
   </body>
