--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
       <footer>
         <div class="signature">
           Designed and coded by
-          <a href="https://github.com/Aylhenia/portfolio-project">LCA</a>
+          <a
+            href="https://github.com/Aylhenia/portfolio-project"
+            title="Portfolio's repository"
+            target="_blank"
+            >LCA</a
+          >
         </div>
       </footer>
     </div>
