--- a/about.html
+++ b/about.html
@@ -129,7 +129,8 @@
       <div id="contact">
         <h2 class="secondary-title mt-5">My skillset</h2>
         <p class="about-me-text">
-          Front-end dev: HTML, CSS, JS, API, Bootstrap, Hosting, SEO <br />
+          Front-end dev: HTML, CSS, JS, API, Bootstrap, Hosting, Flexbox, SEO,
+          Responsive<br />
           Web design: Figma, Adobe Illustrator, Affinity Designer 2, Procreate
           <br />
           You can talk to me in: English, French, Spanish & Catalan. I am
