--- a/work.html
+++ b/work.html
@@ -141,32 +141,93 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row mb-5">
           <div class="col-md-6">
             <img
-              src="images/drawing.png"
+              src="images/YakushimaTravel.png"
               alt="Drawing app"
               class="img-fluid rounded"
             />
           </div>
           <div class="col-md-6">
             <div class="project-description">
-              <h2 class="mb-3">Drawing App</h2>
+              <h2 class="mb-3">Travel Project</h2>
               <p>
-                My first project... I entered the world of front-end development
-                by gaining some knowledge in HTML, CSS, and JavaScript. I used
-                my knowledge of these languages, along with my new skills in VS
-                Code, to build a landing page about this hobbie of mine. The
-                page utilises JavaScript functions to create user interaction,
-                including a Dark theme.
+                A less complex website showcasing a beautiful travel
+                destination. Completely responsive, it was made with more
+                advanced HTML and CSS than the previous two. SEO friendly, it
+                includes multiple HTML embeds. It is a beautifully designed and
+                well-executed landing page with useful information and
+                functional links. Check it out if you are planning on visiting
+                Japan!
               </p>
               <div class="btn">
                 <a
-                  href="https://www.shecodes.io/workshops/shecodes-basics-add-on-58fcd0ea-c1ec-4a27-b9b3-09c6e958a1fa/projects/1680152"
+                  href="https://yakushima-travel.netlify.app/"
                   class="launch-link"
                   target="_blank"
                   title="Visit this drawing application"
-                  >Launch Drawing App</a
+                  >Launch</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-md-6 order-md-2">
+            <img
+              src="images/reactweather.png"
+              alt="World clock application"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6 order-md-1">
+            <div class="project-description">
+              <h2 class="mb-3">React Weather App</h2>
+              <p>
+                Similar to my first project, this time I immersed myself in
+                React development. I combined all my previously acquired
+                knowledge and this highly-demanded framework to build a working
+                weather app incorporating coding best practices, along with the
+                most popular tools and technologies. What weather app design do
+                you prefer?
+              </p>
+              <div class="btn">
+                <a
+                  href="https://reactweatherapplicationlaia.netlify.app/"
+                  class="launch-link"
+                  target="_blank"
+                  title="Check out this world clock application"
+                  >Launch</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-md-6">
+            <img
+              src="images/dictionary.png"
+              alt="Drawing app"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="project-description">
+              <h2 class="mb-3">Dictionary App</h2>
+              <p>
+                Consolidating my React framework skills, I created this
+                minimalistic and stylish dictionary application. Completely
+                functional and visually pleasing, making it was a great learning
+                experience. Don't be shy and look for your word of the day!
+              </p>
+              <div class="btn">
+                <a
+                  href="https://reactdictionarylaia.netlify.app/"
+                  class="launch-link"
+                  target="_blank"
+                  title="Visit this drawing application"
+                  >Launch</a
                 >
               </div>
             </div>
